Fixed social link z-index

--- a/Frontend/assets/sass/4-pages/_thankyou.sass
+++ b/Frontend/assets/sass/4-pages/_thankyou.sass
@@ -5,6 +5,8 @@
 
   .social-links
     margin: 60px 0 35px
+    z-index: 100
+    position: relative
 
   .scholars-hero
     position: absolute
@@ -16,6 +18,7 @@
     background-image: url("/images/scholars-hero.jpg")
     background-size: cover
     background-position: center bottom
+    z-index: 1
 
     &:before
       content: ""
